# PharamcyDutyScheduler

./: .env.example  .gitignore  ARCHITECTURAL_RECOMMENDATIONS.md  COMPLETE_USER_GUIDE.txt  CONSTRAINTS.md  DATABASE_SETUP.md  DEPLOYMENT_SUMMARY.md  DEPLOY_ALL_EXCEPT_DB.sh  DEPLOY_MANUAL_STEPS.md  ENVIRONMENT_SETUP.md  EXPORT_DATABASE.sh  EXTERNAL_ACCESS_GUIDE.md  HISTORY_AWARE_FAIRNESS.md  HOSPITAL_PRESENTATION.txt  IMPLEMENTATION_PROMPT.md  MAJOR_RESTRUCTURE.md  MIGRATION_SUMMARY.md  PULL_FROM_GITHUB.sh  PULL_MANUAL.md  Procfile  QUICK_START_NEW_COMPUTER.sh  README.md  README_REACT.md  ROOT_CAUSE_403_AFTER_NAVIGATIONS.md  TRANSFER_TO_LOCAL.sh  __init__.py  activate_env.sh  alembic.ini  cleanup_duplicates.py  dec_2025_analysis.txt  deploy.sh  february_2026_requests.json  fix_server_setup.sh  january_2026_schedule.json  launch_app.py  monitor_service.sh  pyproject.toml  railway.json  requirements-minimal.txt  requirements.txt  (+18 more)
alembic/: env.py
alembic/versions/: 4edbc0b9babb_rename_employees_to_employee_skills.py  65d4ded2d76d_add_employee_user_relationship.py  d055db82125d_add_holiday_model.py  de842b9ea58d_add_employee_demand_schedule_models.py  (+16 more)
backend/: __init__.py  database.py  fix_request_ids.py  init_db.py  main.py  migrate_add_c_shift.py  migrate_add_p_shift.py  migrate_add_shift_types.py  migrate_combine_display_name.py  migrate_drop_display_name.py  migrate_from_json.py  migrate_remove_shift_column.py  migrate_shift_requests_to_shift_type_id.py  migrate_update_colors.py  models.py  ramadan_periods.py  roster_data_loader.py  seed_database.py  update_h_shifts_in_demands.py  user_employee_sync.py  utils.py
frontend/: .env.example  package-lock.json  package.json
roster/: __init__.py
scripts/: diagnose_solve_month.py
tests/: __init__.py  test_constraints.py  test_samples.py
(+131 files in other folders)
